tests/success/class-inheritance.moc
@class NSObject {
}
+(id)init {}
@end

@class Point : NSObject {
    int x;
    int y;
}
+(id)init {
    x = 0;
    y = 0;
}
-(int)x {
    return x;
}
-(int)y {
    return y;
}
-(void)x:(int)a y:(int)b {
    x = a;
    y = b;
}
@end

@class ColoredPoint : Point {
    int color;
}
+(id)init {
    x = 0;
    y = 0;
    color = 0;
}
-(int)color {
    return color;
}
-(void)setColor:(int)a {
    color = a;
}
@end

void main() {
    ColoredPoint *o = [ColoredPoint init];
}
